--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Creating a Responsive Web Design</title>
 	</head>
+	<link rel="stylesheet" type="text/css" href="css/screen.css">
+	<link rel="stylesheet" type="text/css" href="css/css.css">
 	<body>
 
 		<div id="page">
 			<header>
-				<a class="logo" title="Everyday Things" href="http://codifydesign.com">Everyday Things</a>
+				<a class="logo" title="Everyday Things" href="http://codifydesign.com"><span>Everyday Things</span></a>
 				<div class="hero">
 					<h1>Add interest with natural textures</h1>
 					<a class="btn" title="Get advice from top designers">Get advice from top designers</a>
@@ -17,21 +19,21 @@
 			</header>
 			<section class="main">
 				<aside>
-					<div class="content">
+					<div class="content trending">
 						<h3><a href="#">What's trending</a></h3>
 						<p>Donec rutrum congue leo eget malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
 					</div>
 				</aside>
 
 				<aside>
-					<div class="content">
+					<div class="content find-it">
 						<h3><a href="#">Where to find it</a></h3>
 						<p>Donec rutrum congue leo eget malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
 					</div>
 				</aside>
 
 				<aside>
-					<div class="content">
+					<div class="content tools">
 						<h3><a href="#">Tools of the trade</a></h3>
 						<p>Donec rutrum congue leo eget malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
 					</div>
@@ -63,11 +65,49 @@
 				</aside>
 				<blockquote>
 					<p class="quote">Donec rutrum congue leo eget malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vivamus magna justo.</p>
-					<p class="credit"></p>
+					<p class="credit"><strong>Author Name</strong><br><em>Business Title</em><br>Company</p>
 				</blockquote>
 			</section>
-			<nav></nav>
-			<footer></footer>
+			<nav>
+				<ul>
+					<li>
+						<a href="#" title="About Us">About Us</a>
+						<ul>
+							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
+							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" title="Design Corner">Design Corner</a>
+						<ul>
+							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
+							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
+							<li>
+								<a href="#" title="Sub Link 3">Sub Link 3</a>
+								<ul>
+									<li><a href="#" title="Sub Sub Link 1">Sub Sub Link 1</a></li>
+									<li><a href="#" title="Sub Sub Link 1">Sub Sub Link 2</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="#" title="Products">Products</a>
+						<ul>
+							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
+							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
+						</ul>
+					</li>
+					<li><a href="#" title="Contact Us">Contact Us</a></li>
+				</ul>
+			</nav>
+			<footer>
+				&copy; Everyday Things
+				<div class="content">
+					<a href="#" title="Privacy Policy">Privacy Policy</a>
+					<a href="#" title="Terms of Service">Terms of Service</a>
+				</div>
+			</footer>
 		</div>
 
 
