--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Creating a Responsive Web Design</title>
 	</head>
-	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<link rel="stylesheet" type="text/css" href="css/css.css">
+	<link rel="stylesheet" type="text/css" href="css/screen.css">
 	<body>
 
 		<div id="page">
@@ -71,19 +71,19 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="#" title="About Us">About Us</a>
+						<a href="#" title="About Us" aria-haspopup="true">About Us</a>
 						<ul>
 							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
 							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#" title="Design Corner">Design Corner</a>
+						<a href="#" title="Design Corner" aria-haspopup="true">Design Corner</a>
 						<ul>
 							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
 							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
 							<li>
-								<a href="#" title="Sub Link 3">Sub Link 3</a>
+								<a href="#" title="Sub Link 3" aria-haspopup="true">Sub Link 3</a>
 								<ul>
 									<li><a href="#" title="Sub Sub Link 1">Sub Sub Link 1</a></li>
 									<li><a href="#" title="Sub Sub Link 1">Sub Sub Link 2</a></li>
@@ -92,7 +92,7 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#" title="Products">Products</a>
+						<a href="#" title="Products" aria-haspopup="true">Products</a>
 						<ul>
 							<li><a href="#" title="Sub Link 1">Sub Link 1</a></li>
 							<li><a href="#" title="Sub Link 2">Sub Link 2</a></li>
